# llm-quant-bench

./: .gitignore  README.md  pyproject.toml
docs/: l20-qwen72b-awq-quality-results.md  l20-qwen72b-awq-results.md  research-experiment-plan.md  strict-experiment-suite.md
examples/: config.example.json  full_research_matrix.example.json  golden_set.jsonl  quant_ablation.example.json  runtime_ablation.example.json
llm_quant_bench/: __init__.py  cli.py  client.py  demo.py  load.py  metrics.py  runner.py
paper/: README.md  references.bib  single_l20_70b_awq_serving.bbl  single_l20_70b_awq_serving.tex
scripts/: check_experiment_readiness.py  run_ablation_matrix.py  run_longbench_8k.py  run_quality_eval.py  run_quality_retention.py  run_repeated_load.py  score_longbench_official.py  score_mt_bench.py  summarize_energy.py  summarize_quality_retention.py  summarize_repeats_ci.py
tests/: test_ablation_matrix_script.py  test_client.py  test_energy_script.py  test_load.py  test_longbench_official_scorer.py  test_metrics.py  test_mt_bench_judge_script.py  test_quality_eval_script.py  test_quality_retention_script.py  test_quality_retention_wrapper.py  test_readiness_script.py  test_repeats_ci_script.py  test_runner.py
