[project]
name = "llm-quant-bench"
version = "0.1.0"
description = "Benchmark quantized LLM quality, stability, and serving usability against a baseline model."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
llm-quant-bench = "llm_quant_bench.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

